# libresample

./: CMakeLists.txt
tests/: resample-sndfile.c
